--- a/html/lesson_plans/contemporary_detection_and_empire.html
+++ b/html/lesson_plans/contemporary_detection_and_empire.html
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="lesson-plan">
 				<h2 id="lesson-plan">Detection and the Logics of Empire</h2>
 					<div class="aspect-ratio-box">
-          	<img src="/img/lesson_plans/uvc_0086-1800px.jpg" srcset="/img/lesson_plans/uvc_0086-1800px.jpg 1800w, /img/lesson_plans/uvc_0086-1650px.jpg 1650w, /img/lesson_plans/uvc_0086-1500px.jpg 1500w, /img/lesson_plans/uvc_0086-1350px.jpg 1350w, /img/lesson_plans/uvc_0086-1200px.jpg 1200w, /img/lesson_plans/uvc_0086-1050px.jpg 1050w, /img/lesson_plans/uvc_0086-900px.jpg 900w, /img/lesson_plans/uvc_0086-750px.jpg 750w, /img/lesson_plans/uvc_0086-600px.jpg 600w, /img/lesson_plans/uvc_0086-450px.jpg 450w, /img/lesson_plans/uvc_0086-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A black and white landscape drawing of two non-descript animals in a foggy wood with a large house in the background"/>
+          	<img src="/img/lesson_plans/uvc_0086-1800px.jpg" srcset="/img/lesson_plans/uvc_0086-1800px.jpg 1800w, /img/lesson_plans/uvc_0086-1650px.jpg 1650w, /img/lesson_plans/uvc_0086-1500px.jpg 1500w, /img/lesson_plans/uvc_0086-1350px.jpg 1350w, /img/lesson_plans/uvc_0086-1200px.jpg 1200w, /img/lesson_plans/uvc_0086-1050px.jpg 1050w, /img/lesson_plans/uvc_0086-900px.jpg 900w, /img/lesson_plans/uvc_0086-750px.jpg 750w, /img/lesson_plans/uvc_0086-600px.jpg 600w, /img/lesson_plans/uvc_0086-450px.jpg 450w, /img/lesson_plans/uvc_0086-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Monochrome landscape with two animals in a foggy wood with a large house in the background."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
@@ -55,7 +55,7 @@
 						
 						<p><strong>Webpage Developer:</strong> Ava K. Bindas</p>
 
-						<p><strong>Cluster Title:</strong> Undisciplining in and through Contemporary Texts</p>
+						<p><strong>Cluster Title:</strong> Undisciplining In and Through Contemporary Texts</p>
 
 						<p><strong>Publication Date:</strong> 2024</p>
 					</div>
@@ -67,7 +67,7 @@
 						<li><a href="#description">Cluster Description</a>
 							<ol>
 								<li><a href="#moonstone"><em>The Moonstone</em></a></li>
-								<li><a href="#speckled-band">"The Adventure of the Speckled Band"</a></li>
+								<li><a href="#speckled-band">“The Adventure of the Speckled Band”</a></li>
 								<li><a href="#mexican-gothic"><em>Mexican Gothic</em></a></li>
 							</ol></li>
 						<li><a href="#frameworks">Critical Frameworks</a></li>
@@ -144,25 +144,25 @@
 						<h4 id="sources-1">Genre & Early Detection</h4>
 
 						<dl>
-							<dt id="Brantlinger">Brantlinger, Patrick. “<a aria-label="External Link" href="https://doi.org/10.2307/3044667">What Is &lsquo;Sensational’ About the &lsquo;Sensation Novel</a>’?” <em>Nineteenth-Century Fiction</em>, vol. 37, no. 1, 1982, pp. 1-28.</dt>
+							<dt id="brantlinger">Brantlinger, Patrick. “<a aria-label="External Link" href="https://doi.org/10.2307/3044667">What Is &lsquo;Sensational’ About the &lsquo;Sensation Novel</a>’?” <em>Nineteenth-Century Fiction</em>, vol. 37, no. 1, 1982, pp. 1-28.</dt>
 
-							<dd aria-describedby="Brantlinger">
+							<dd aria-describedby="brantlinger">
 								<p>In this seminal essay, Brantlinger explores the subgenre of sensation fiction - often considered a precursor to detective fiction. The essay, which includes <em>The Moonstone</em> among the texts it considers, outlines the genre’s predecessors in gothicism and newgate fiction, and its development into the detective novel. As well as tracing a literary lineage for detection, I find that the way Brantlinger thinks about genre - as both identifiable and yet inherently slippery - is helpful for framing discussions about how the texts in this cluster adhere to, use, and challenge conventions.</p>
 							</dd>
 						</dl>
 
 						<dl>
-							<dt id="Miller">Miller, D.A. <em>The Novel and the Police</em>. University of California Press, 1988</dt>
+							<dt id="miller">Miller, D.A. <em>The Novel and the Police</em>. University of California Press, 1988</dt>
 
-							<dd aria-describedby="Miller">
+							<dd aria-describedby="miller">
 								<p>Miller argues that the 19th century novel is inherently conservative, guided by a Foucauldian disciplinary impulse. Miller analyzes detective novels by Charles Dickens, Wilkie Collins, and Anthony Trollope to make his claim. This framing is helpful when thinking about how detective stories which invoke imperialism, such as <em>The Moonstone</em> and “The Speckled Band” regulate the boundaries of the home and nation in order to differentiate England and the domestic sphere from the colonies. When I talk to my students about these ideas, I sometimes assign excerpts from Miller and Foucault, or give a thorough primer on their theories before asking students to engage with them in the context of the novels and stories we are reading. Some of these ideas are also addressed in the recommended chapter from Yumna Siddiqi, below.</p>
 							</dd>
 						</dl>
 
 						<dl>
-							<dt id="Smith">Smith, Andrew. <em>Gothic Literature</em>, Edinburgh University Press, 2013.</dt>
+							<dt id="smith">Smith, Andrew. <em>Gothic Literature</em>, Edinburgh University Press, 2013.</dt>
 
-							<dd aria-describedby="Smith">
+							<dd aria-describedby="smith">
 								<p>Because gothicism arises so often when reading early detective stories, students asked me for information about its definition, development, and contexts. The introduction to this overview of topics and histories within gothic literature has a section on “Gothic Histories” which explores the various contextual meanings of the Gothic. These include the original, racially-inflected meaning (referencing “barbaric” German tribes), as well as gothicism’s preoccupations with the Other, the unexplained/able (and its push back against Enlightenment rationality, so key for understanding and troubling its relationship to detection), and with transgression. Understanding how gothicism and detection take different approaches to these questions with which they are both preoccupied helps us ask interesting questions and trouble generic boundaries.</p>
 							</dd>
 						</dl>
@@ -172,9 +172,9 @@
 						<h4 id="sources-2">England & India</h4>
 
 						<dl>
-							<dt id="Tomaiuolo">Tomaiuolo, Saverio. “Sensation Fiction, Empire, and the Indian Mutiny.” <em>The Cambridge Companion to Sensation Fiction</em>, Cambridge University Press, 2013.</dt>
+							<dt id="tomaiuolo">Tomaiuolo, Saverio. “Sensation Fiction, Empire, and the Indian Mutiny.” <em>The Cambridge Companion to Sensation Fiction</em>, Cambridge University Press, 2013.</dt>
 
-							<dd aria-describedby="Tomaiuolo">
+							<dd aria-describedby="tomaiuolo">
 								<p>Tomaiuolo’s chapter in <em>The Cambridge Companion to Sensation Fiction</em> gives important context for understanding depictions of India and Indian colonists in sensation and early detective fiction. The chapter gives an overview of English reactions to reporting on what has variously been termed the Indian/Sepoy Rebellion of 1857, the Indian/Sepoy Rebellion/Mutiny, and the First War of Independence. Of its many titles (there are more than those mentioned above!), I tend to use either The Indian Rebellion or the First War of Independence, to give the event and the rebels the proper respect and to honor their anti-colonial intent. I explain this choice to my students when providing context.</p>
 
 								<p>The chapter referenced here only glosses <em>The Moonstone</em>, but it does delve into analysis of two other sensation novels by Mary Elizabeth Braddon, one of which (<em>Lady Audley’s Secret</em>, 1862) is an example of an early detective novel. This can be used to help students understand how to analyze novels which do not directly deal with an event, but for which the event is contextually important.</p>
@@ -182,9 +182,9 @@
 						</dl>
 
 						<dl>
-							<dt id="Siddiqi">Siddiqi, Yumna. <em>Anxieties of Empire and the Fiction of Intrigue.</em> Columbia University Press, 2008.</dt>
+							<dt id="siddiqi">Siddiqi, Yumna. <em>Anxieties of Empire and the Fiction of Intrigue.</em> Columbia University Press, 2008.</dt>
 
-							<dd aria-describedby="Siddiqi">
+							<dd aria-describedby="siddiqi">
 								<p>Siddiqi’s book is useful in several ways: the introduction frames connections between “fiction of intrigue” (a broader definition than detective fiction, which is useful for thinking within the category of genre), imperialism, and surveillance, order, and control. In her chapter “Sherlock Holmes and the Cesspool of Empire,” Siddiqi demonstrates a pattern in Sherlock Holmes stories of characters which “contaminate” the home sphere after returning from abroad. I have assigned this chapter as reading for students before, and it has generally been well-received as an approachable, convincing, and interesting new perspective on Sherlock Holmes, which students had not before considered.</p>
 							</dd>
 						</dl>
@@ -194,9 +194,9 @@
 						<h4 id="sources-3">Objectivity</h4>
 
 						<dl>
-							<dt id="Daston">Daston, Lorraine & Peter Galison. <em>Objectivity</em>. Princeton University Press, 2007.</dt>
+							<dt id="daston">Daston, Lorraine & Peter Galison. <em>Objectivity</em>. Princeton University Press, 2007.</dt>
 
-							<dd aria-describedby="Daston">
+							<dd aria-describedby="daston">
 								<p>One of the most prevalent ideas I have run into when teaching the course from which this cluster is drawn is the notion that detectives are inherently good because they uncover an objective truth. In this text, Daston and Galison trace the rise of the episteme of objectivity in the nineteenth century. Their history is incredibly helpful in demonstrating that objectivity is itself constructed. It is also a useful reminder that, while truth-seekers including scientists and detectives may arrive at a correct conclusion (e.g., identify the plant, apprehend the criminal), the assumptions and biases which accompany their production of knowledge remain consequential. This text is quite dense, but if students are interested in the history of science and objectivity, they may find the first chapter an interesting introduction.</p>
 							</dd>
 						</dl>
@@ -206,25 +206,25 @@
 						<h4 id="sources-4">Mexico, Race, & Empire</h4>
 
 						<dl>
-							<dt id="Alberto">Alberto, Lourdes. “Nations, Nationalisms, and Ind&iacute;genas: The &lsquo;Indian’ in the Chicano Revolutionary Imaginary.” <em>Critical Ethnic Studies</em>, vol. 2, no. 1, 2016, pp. 107-127.</dt>
+							<dt id="alberto">Alberto, Lourdes. “Nations, Nationalisms, and Ind&iacute;genas: The &lsquo;Indian’ in the Chicano Revolutionary Imaginary.” <em>Critical Ethnic Studies</em>, vol. 2, no. 1, 2016, pp. 107-127.</dt>
 
-							<dd aria-describedby="Alberto">
+							<dd aria-describedby="alberto">
 								<p>Lourdes’s essay covers Indigenismo in early-mid-century Mexico &amp; in the Chicano movement. Different forms of indigeneity have been treated differently in Mexico since colonization, and especially since the 20th century Indigenismo movement (which privileges ancient Aztec culture over still-existent Mayan populations in a nationalist myth-making move). This history is something many US students are unfamiliar with, and because Noemi’s Mestiza identity plays a significant role in the text, it’s important to be aware of and cover when teaching this novel, especially considering its concern with race and the relationships between whiteness and indigeneity within the broader umbrellas of colonialism and Latine identity.</p>
 							</dd>
 						</dl>
 
 						<dl>
-							<dt id="Dalton">Dalton, David S. <em>Mestizo Modernity : Race, Technology, and the Body in Post-Revolutionary Mexico</em>. University of Florida Press, 2018.</dt>
+							<dt id="dalton">Dalton, David S. <em>Mestizo Modernity : Race, Technology, and the Body in Post-Revolutionary Mexico</em>. University of Florida Press, 2018.</dt>
 
-							<dd aria-describedby="Dalton">
+							<dd aria-describedby="dalton">
 								<p>Dalton gives further context to the creation of the idea of Mestizaje as a unifying racial myth meant to unite Mexico in the period following the revolution of the early 20th century. Dalton links this specific idea of the Mestizo in the Mexican cultural imagination to earlier attempts to grapple with race and indigeneity, as well as to the notions of modernity and progress. Dalton’s exploration of how Mestizaje was officially elevated is particularly interesting to consider alongside the eugenics of the English family (ironically, also the Daltons) in <em>Mexican Gothic</em>.</p>
 							</dd>
 						</dl>
 
 						<dl>
-							<dt id="Reeder">Reeder, Jessie. <em>The</em> <em>Forms of Informal Empire: Britain, Latin America, and Nineteenth Century Literature</em>. Johns Hopkins University Press, 2020.</dt>
+							<dt id="reeder">Reeder, Jessie. <em>The</em> <em>Forms of Informal Empire: Britain, Latin America, and Nineteenth Century Literature</em>. Johns Hopkins University Press, 2020.</dt>
 
-							<dd aria-describedby="Reeder">
+							<dd aria-describedby="reeder">
 								<p>This text provides a helpful framework for understanding Mexico’s position in relation to England in the nineteenth century. While Mexico was never an English colony, its influence was still felt through what Reeder calls “Informal Empire,” a term which describes how trade and economic relations came to exert colonial power without formal incorporation into the British Empire. While <em>Mexican Gothic</em> takes place in the 1950s, the family at the mystery’s center are English, and came to Mexico to make their fortune through silver mining. Their history of exploitative labor practices and relationship with the locals become important to the story.</p>
 
 								<p>Reeder notes that while the term “Informal Empire” seems to draw a distinction between types of empire (in/formal), imperialism operates along a spectrum and presents itself differently in individual, local contexts; I find this a useful idea for connecting the texts, and particularly in shifting from texts which consider England’s colonial relationship to India in the 19th century to the aftermath of its relationship with Mexico in the 20th.</p>
@@ -272,7 +272,7 @@
 									<ul>
 										<li>Ask students to close-read illustrations of this story, as well as passages depicting Miss Stoner and her sister, to understand the construction of white Victorian femininity.
 											<ul>
-												<li>Image: Friedrich, Josef. <em><a aria-label="External Link" href=".%20https:/www.arthur-conan-doyle.com/index.php/The_Adventure_of_the_Speckled_Band#Illustrations">She writhed as one who is in terrible pain</a></em>. 1906. <em>The Arthur Conan Doyle Encyclopedia</em></li>
+												<li>Image: Friedrich, Josef. <em><a aria-label="External Link" href="https:/www.arthur-conan-doyle.com/index.php/The_Adventure_of_the_Speckled_Band#Illustrations">She writhed as one who is in terrible pain</a></em>. 1906. <em>The Arthur Conan Doyle Encyclopedia</em></li>
 											</ul>
 										</li>
 										<li>Contrast these depictions of the endangered white woman with the descriptions of her stepfather, and in particular his associations with India and Indian animals</li>
@@ -329,7 +329,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Simões da Fonseca, Gastão. <a aria-label="External Link" href="https://www.arthur-conan-doyle.com/index.php/File:Ernest-flammarion-1913-premieres-aventures-de-sherlock-holmes-p19-illu.jpg"><em>Premieres Aventures de Sherlock Holmes</em></a>. Drawing, 1913. Arthur Conon Doyle Encylopedia. The work is out of copyright and therefore in the public domain. </p>
+					<p>Simões da Fonseca, Gastão. <a aria-label="External Link" href="https://www.arthur-conan-doyle.com/index.php/File:Ernest-flammarion-1913-premieres-aventures-de-sherlock-holmes-p19-illu.jpg"><em>Premieres Aventures de Sherlock Holmes</em></a>. Drawing, 1913. <em>Arthur Conon Doyle Encylopedia</em>. The work is out of copyright and therefore in the public domain. </p>
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
