--- a/sitemap.html
+++ b/sitemap.html
@@ -73,6 +73,7 @@
 										<li><a href="html/lesson_plans/contemporary_bronte_phillips.html">Emily Brontë’s <em>Wuthering Heights</em> and Caryl Phillips’s <em>The Lost Child</em></a></li>
 										<li><a href="html/lesson_plans/contemporary_africanfuturism.html">Africanfuturism and British Catastrophe Literature</a></li>
 										<li><a href="html/lesson_plans/contemporary_postcolonial_texts.html">Colonial/Postcolonial Texts of the “Dark Continent”</a></li>
+										<li><a href="html/lesson_plans/contemporary_detection_and_empire.html">Detection and the Logics of Empire</a></li>
 									</ol>
 								</li>
 								<li><a href="/html/lesson_plans/palestine_eighteenth_nineteenth_introduction.html">Palestine in the Eighteenth and Nineteenth Centuries</a>
