u Polland LP code fixes

--- a/html/lesson_plans/contemporary-jane-eyre-parasite.html
+++ b/html/lesson_plans/contemporary-jane-eyre-parasite.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>Undisciplining through Contemporary Novels: Jane Eyre, Re Jane, and Parasite | Undisciplining the Victorian Classroom</title>
+    <title>Undisciplining through Contemporary Novels: <em>Jane Eyre</em>, <em>Re Jane</em>, and <em>Parasite</em> | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Reframes Jane Eyre by pairing it with Korean-American and Korean texts, emphasizing autoethnographic composition, critical race theory, and intersectional feminism"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -37,7 +37,7 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="lesson-plan">
-				<h2 id="lesson-plan">Undisciplining through Contemporary Novels: Jane Eyre, Re Jane, and Parasite</h2>
+				<h2 id="lesson-plan">Undisciplining through Contemporary Novels: <em>Jane Eyre</em>, <em>Re Jane</em>, and <em>Parasite</em></h2>
 					<div class="aspect-ratio-box">
           	<img src="/img/lesson_plans/uvc_0087-1800px.jpg" srcset="/img/lesson_plans/uvc_0087-1800px.jpg 1800w, /img/lesson_plans/uvc_0087-1650px.jpg 1650w, /img/lesson_plans/uvc_0087-1500px.jpg 1500w, /img/lesson_plans/uvc_0087-1350px.jpg 1350w, /img/lesson_plans/uvc_0087-1200px.jpg 1200w, /img/lesson_plans/uvc_0087-1050px.jpg 1050w, /img/lesson_plans/uvc_0087-900px.jpg 900w, /img/lesson_plans/uvc_0087-750px.jpg 750w, /img/lesson_plans/uvc_0087-600px.jpg 600w, /img/lesson_plans/uvc_0087-450px.jpg 450w, /img/lesson_plans/uvc_0087-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="a large, cragged beige stone set in a dark wooden base and standing on a dark table"/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
@@ -506,13 +506,13 @@
 				<section aria-labelledby="endnotes">
 					<h3 id="endnotes">Endnotes</h3>
 					<ol>
-						<li id="endnote-1">For an overview of some critiques of this concept in postcolonial studies, see Gandhi (2019, 126-9).<a  href="#endnote-1-ref" aria-label="Back to text">Back to text</a></li>
+						<li id="endnote-1">For an overview of some critiques of this concept in postcolonial studies, see Gandhi (2019, 126-9).<a  href="#endnote-1-ref" aria-label="Back to text"> Back to text</a></li>
 					
-						<li id="endnote-2">I’m grateful to this student, who wished to remain anonymous, for allowing me to quote her insightful work. We also acknowledge and discuss the contingency and fluidity of racial stereotypes, such as that of Asian-Americans being “model minorities” giving way in recent years to racist attacks because of the “Chinese flu.”<a  href="#endnote-2-ref" aria-label="Back to text">Back to text</a></li>
+						<li id="endnote-2">I’m grateful to this student, who wished to remain anonymous, for allowing me to quote her insightful work. We also acknowledge and discuss the contingency and fluidity of racial stereotypes, such as that of Asian-Americans being “model minorities” giving way in recent years to racist attacks because of the “Chinese flu.”<a  href="#endnote-2-ref" aria-label="Back to text"> Back to text</a></li>
 
-						<li id="endnote-3">Special thanks to Ryan Fong for guiding me into this area of scholarship.<a  href="#endnote-3-ref" aria-label="Back to text">Back to text</a></li>
+						<li id="endnote-3">Special thanks to Ryan Fong for guiding me into this area of scholarship.<a  href="#endnote-3-ref" aria-label="Back to text"> Back to text</a></li>
 
-						<li id="endnote-4"><p>Students are introduced to the basics of making podcasts through the <a aria-label="External Link" href="https://libstory.github.io/assign-prework.html">“Short Radio Introduction” exercise</a> developed by the University of Washington Libraries. I instruct students to take about one hour to complete it as homework, and share the results in class.</p><a  href="#endnote-4-ref" aria-label="Back to text">Back to text</a></li>
+						<li id="endnote-4">Students are introduced to the basics of making podcasts through the "<a aria-label="External Link" href="https://libstory.github.io/assign-prework.html">Short Radio Introduction</a>" exercise developed by the University of Washington Libraries. I instruct students to take about one hour to complete it as homework, and share the results in class.<a  href="#endnote-4-ref" aria-label="Back to text"> Back to text</a></li>
 					</ol>
 				</section>
 
@@ -524,7 +524,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Trainholic. <em><a href="https://commons.wikimedia.org/wiki/File:Parasite_props_2.jpg.">Parasite Prop</a></em>. 23 Feb. 2020. This file is licensed under the Creative Commons Attribution Share Alike 3.0 Unported license. You are free to share and remix the work with attribution.</p>
+					<p>Trainholic. <em><a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Parasite_props_2.jpg.">Parasite Prop</a></em>. 23 Feb. 2020. This file is licensed under the Creative Commons Attribution Share Alike 3.0 Unported license. You are free to share and remix the work with attribution.</p>
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
