--- a/html/lesson_plans/contemporary-jane-eyre-parasite.html
+++ b/html/lesson_plans/contemporary-jane-eyre-parasite.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>Undisciplining through Contemporary Novels: <em>Jane Eyre</em>, <em>Re Jane</em>, and <em>Parasite</em> | Undisciplining the Victorian Classroom</title>
+    <title>Undisciplining Through <em>Jane Eyre</em>, <em>Re Jane</em>, and <em>Parasite</em> | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Reframes Jane Eyre by pairing it with Korean-American and Korean texts, emphasizing autoethnographic composition, critical race theory, and intersectional feminism."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -37,7 +37,7 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="lesson-plan">
-				<h2 id="lesson-plan">Undisciplining through Contemporary Novels: <em>Jane Eyre</em>, <em>Re Jane</em>, and <em>Parasite</em></h2>
+				<h2 id="lesson-plan">Undisciplining Through <em>Jane Eyre</em>, <em>Re Jane</em>, and <em>Parasite</em></h2>
 					<div class="aspect-ratio-box">
           	<img src="/img/lesson_plans/uvc_0087-1800px.jpg" srcset="/img/lesson_plans/uvc_0087-1800px.jpg 1800w, /img/lesson_plans/uvc_0087-1650px.jpg 1650w, /img/lesson_plans/uvc_0087-1500px.jpg 1500w, /img/lesson_plans/uvc_0087-1350px.jpg 1350w, /img/lesson_plans/uvc_0087-1200px.jpg 1200w, /img/lesson_plans/uvc_0087-1050px.jpg 1050w, /img/lesson_plans/uvc_0087-900px.jpg 900w, /img/lesson_plans/uvc_0087-750px.jpg 750w, /img/lesson_plans/uvc_0087-600px.jpg 600w, /img/lesson_plans/uvc_0087-450px.jpg 450w, /img/lesson_plans/uvc_0087-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A large, cragged beige stone set in a dark wooden base and standing on a dark table."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
@@ -563,7 +563,7 @@
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 
-					<p>Matt Poland, dev. “Undisciplining through Contemporary Novels: Jane Eyre, Re Jane, and Parasite.” Barbara Barrow, Renee Fox, Cherrie Kwok, Jessie Reeder, Oishani Sengupta, Emma Soberano, collab. peer revs.; Ryan D. Fong, les. plan clust. dev./copyed. <em>Undisciplining the Victorian Classroom</em>, 2024, <a href="/html/lesson_plans/contemporary-jane-eyre-parasite.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/contemporary-jane-eyre-parasite.html</a>.</p>
+					<p>Matt Poland, dev. “Undisciplining Through <em>Jane Eyre</em>, <em>Re Jane</em>, and <em>Parasite</em>.” Barbara Barrow, Renee Fox, Cherrie Kwok, Jessie Reeder, Oishani Sengupta, Emma Soberano, collab. peer revs.; Ryan D. Fong, les. plan clust. dev./copyed. <em>Undisciplining the Victorian Classroom</em>, 2024, <a href="/html/lesson_plans/contemporary-jane-eyre-parasite.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/contemporary-jane-eyre-parasite.html</a>.</p>
 				</section>
 			</main>
 			
