u je pass three

--- a/html/lesson_plans/contemporary-jane-eyre-parasite.html
+++ b/html/lesson_plans/contemporary-jane-eyre-parasite.html
@@ -81,14 +81,14 @@
 						</li>
 						<li><a href="#adapting">Adapting the Cluster to Literature and Cultural Studies Classrooms</a>
 							<ol>
-								<li><a href="#adaptaton-1">The <em>Hallyu</em> Wave, Korean Feminisms, Transnational Cultural Identity</a></li>
+								<li><a href="#adaptation-1">The <em>Hallyu</em> Wave, Korean Feminisms, Transnational Cultural Identity</a></li>
 								<li><a href="#adaptation-2"> <em>The Handmaiden</em> and <em>Fingersmith</em>: further transcultural encounters</a></li>
 							</ol>
 						</li>
 						<li><a href="#discussion">Discussion Questions, Key Passages, and Class Activities</a></li>
 						<li><a href="#assignments">Example Assignments and Assessment</a></li>
-						<li><a href="#sources">Sources</a></li>
 						<li><a href="#endnotes">Endnotes</a></li>
+						<li><a href="#sources">Sources</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
 						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
@@ -103,7 +103,7 @@
 
 						<p>In this lesson plan I detail the 100-level composition course, “Imagining Identity,” which I have taught in the Expository Writing Program at the University of Washington in Seattle. Rather than centering literary analysis and adaptation as frameworks, the course is grounded in feminist theory, especially Black feminist theories of intersectionality, and autoethnography as a compositional practice.</p>
 
-						<p>The course is organized around three texts: Patricia Park’s <em>Re Jane</em> (2015), Charlotte Brontë’s <em>Jane Eyre</em> (1847), and Bong Joon Ho’s film <em>Parasite</em> (2019). These mutually illuminating narratives ground students’ investigations into intersectional identity and its imbrication in communities, which is carried out through discussion and autoethnographic writing, as well as podcasting (see <a href="#assignments">Assignments</a>).</p>
+						<p>The course is organized around three texts: Patricia Park’s <em>Re Jane</em> (2015), Charlotte Brontë’s <em>Jane Eyre</em> (1847), and Bong Joon Ho’s film <em>Parasite</em> (2019). These mutually illuminating narratives ground students’ investigations into intersectional identity and its imbrication in communities, which is carried out through discussion and autoethnographic writing, as well as podcasting (see <a href="#assignments">Example Assignments and Assessment</a>).</p>
 
 						<p>I owe the pairing of <em>Re Jane</em> and <em>Jane Eyre</em> to Olivia Loksing Moy’s (2020) inspired article in the “Undisciplining Victorian Studies” special issue of <em>Victorian Studies</em>. On the surface a Korean-American adaptation of <em>Jane Eyre</em>, <em>Re Jane</em> is also a sophisticated and relatable novel about hybrid identity, gender performance, and cross-cultural comparison. It is relatable in a few important ways: it uses clear, contemporary language that students won’t struggle with, compared to <em>Jane Eyre</em>. It is also culturally legible to students from Asian American communities, and those from outside them find familiarity in the early-20s life scenarios it depicts. <em>Re Jane</em> is not just an intertext for the “canonical” novel, but rather a lens which focuses transcultural and transhistorical issues of gender, race, and social class, as well as a formally supple example for students to refer to in their own autoethnographic writing.</p>
 
@@ -181,7 +181,7 @@
 
 						<p>If intersectionality is the paradigm for our class discussions of identity, then autoethnography is the method we use to investigate it through the writing assignments. The notion of the “participant observer” is a point of connection between nineteenth-century social sciences and realist novels including <em>Jane Eyre</em>, as James Buzard (2005) has shown. Autoethnographic writing allows students to develop a critical sense of their own “insider’s outsideness,” honed by reading the literary texts (209). Rhetoric and composition scholars teach us that autoethnography is also a versatile framework for academic writing because it activates the connection between the personal and the critical. Melissa Tombro’s (2016) scholarship was particularly formative for me in designing this course.</p>
 
-						<p>Through two short sketches and two versions of a medium-length essay (the second extensively revised – see the <a href="#assignments">Assignments and Assessments</a> section) students begin by describing how being a part of a particular subculture has shaped their identities and steadily develop a critical perspective on these experiences. The goal of this process, culminating in the medium-length essay, is to step back to reflect on and analyze what your experiences mean by asking, for example: where do values or practices come from in the subculture? What might be some of the unstated cultural or social assumptions that this subculture is founded on? For example, the implicit relations in terms of gender, race, or class on which the idea of “normality” in this community is based? How and why experiences, attitudes, and practices differ from dominant American culture?</p>
+						<p>Through two short sketches and two versions of a medium-length essay (the second extensively revised – see the <a href="#assignments">Example Assignments and Assessment</a> section) students begin by describing how being a part of a particular subculture has shaped their identities and steadily develop a critical perspective on these experiences. The goal of this process, culminating in the medium-length essay, is to step back to reflect on and analyze what your experiences mean by asking, for example: where do values or practices come from in the subculture? What might be some of the unstated cultural or social assumptions that this subculture is founded on? For example, the implicit relations in terms of gender, race, or class on which the idea of “normality” in this community is based? How and why experiences, attitudes, and practices differ from dominant American culture?</p>
 
 						<p>Recently, ethical issues with autoethnography as a social science research method has created controversy (see, e.g., Mohammed et al., “Open letter”). As a composition practice, Tombro provides advice on helping students feel comfortable with disclosure of personal information and ethical practices in engaging with their chosen subcultures. She emphasizes that instructors should help students navigate how to pick an autoethnographic topic which “interests them and increase their understanding of the subculture while staying within their comfort zone” (Tombro 43).</p>
 
@@ -479,6 +479,20 @@
 					</section>
 				</section>
 
+				<section aria-labelledby="endnotes">
+					<h3 id="endnotes">Endnotes</h3>
+
+					<ol>
+						<li id="endnote-1">For an overview of some critiques of this concept in postcolonial studies, see Gandhi (2019, 126-9). <a  href="#endnote-1-ref" aria-label="Back to text">Back to text</a></li>
+					
+						<li id="endnote-2">I’m grateful to this student, who wished to remain anonymous, for allowing me to quote her insightful work. We also acknowledge and discuss the contingency and fluidity of racial stereotypes, such as that of Asian-Americans being “model minorities” giving way in recent years to racist attacks because of the “Chinese flu.” <a  href="#endnote-2-ref" aria-label="Back to text"> Back to text</a></li>
+
+						<li id="endnote-3">Special thanks to Ryan Fong for guiding me into this area of scholarship. <a  href="#endnote-3-ref" aria-label="Back to text">Back to text</a></li>
+
+						<li id="endnote-4">Students are introduced to the basics of making podcasts through the "<a aria-label="External Link" href="https://libstory.github.io/assign-prework.html">Short Radio Introduction</a>" exercise developed by the University of Washington Libraries. I instruct students to take about one hour to complete it as homework, and share the results in class. <a  href="#endnote-4-ref" aria-label="Back to text">Back to text</a></li>
+					</ol>
+				</section>
+
 				<section aria-labelledby="sources">
 					<h3 id="sources">Sources</h3>
 
@@ -532,20 +546,6 @@
 					<p>Waters, Sarah. <em>Fingersmith</em>. New York: Riverhead Books, 2002.</p>
 
 					<p>Zauner, Michelle. <em>Crying in H-Mart: A Memoir</em>. New York: Alfred A. Knopf, 2021.</p>
-				</section>
-
-				<section aria-labelledby="endnotes">
-					<h3 id="endnotes">Endnotes</h3>
-
-					<ol>
-						<li id="endnote-1">For an overview of some critiques of this concept in postcolonial studies, see Gandhi (2019, 126-9). <a  href="#endnote-1-ref" aria-label="Back to text">Back to text</a></li>
-					
-						<li id="endnote-2">I’m grateful to this student, who wished to remain anonymous, for allowing me to quote her insightful work. We also acknowledge and discuss the contingency and fluidity of racial stereotypes, such as that of Asian-Americans being “model minorities” giving way in recent years to racist attacks because of the “Chinese flu.” <a  href="#endnote-2-ref" aria-label="Back to text"> Back to text</a></li>
-
-						<li id="endnote-3">Special thanks to Ryan Fong for guiding me into this area of scholarship. <a  href="#endnote-3-ref" aria-label="Back to text">Back to text</a></li>
-
-						<li id="endnote-4">Students are introduced to the basics of making podcasts through the "<a aria-label="External Link" href="https://libstory.github.io/assign-prework.html">Short Radio Introduction</a>" exercise developed by the University of Washington Libraries. I instruct students to take about one hour to complete it as homework, and share the results in class. <a  href="#endnote-4-ref" aria-label="Back to text">Back to text</a></li>
-					</ol>
 				</section>
 
 				<section aria-labelledby="biography">
