--- a/html/lesson_plans/contemporary-jane-eyre-parasite.html
+++ b/html/lesson_plans/contemporary-jane-eyre-parasite.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>Undisciplining Through <em>Jane Eyre</em>, <em>Re Jane</em>, and <em>Parasite</em> | Undisciplining the Victorian Classroom</title>
+    <title>Undisciplining Through Jane Eyre, Re Jane, and Parasite | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Reframes Jane Eyre by pairing it with Korean-American and Korean texts, emphasizing autoethnographic composition, critical race theory, and intersectional feminism."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
