u polland LP menu caps

--- a/html/lesson_plans/contemporary-jane-eyre-parasite.html
+++ b/html/lesson_plans/contemporary-jane-eyre-parasite.html
@@ -82,7 +82,7 @@
 						<li><a href="#adapting">Adapting the Cluster to Literature and Cultural Studies Classrooms</a>
 							<ol>
 								<li><a href="#adaptation-1">The <em>Hallyu</em> Wave, Korean Feminisms, Transnational Cultural Identity</a></li>
-								<li><a href="#adaptation-2"> <em>The Handmaiden</em> and <em>Fingersmith</em>: further transcultural encounters</a></li>
+								<li><a href="#adaptation-2"> <em>The Handmaiden</em> and <em>Fingersmith</em>: Further Transcultural Encounters</a></li>
 							</ol>
 						</li>
 						<li><a href="#discussion">Discussion Questions, Key Passages, and Class Activities</a></li>
