u sitemap cont LPs

--- a/sitemap.html
+++ b/sitemap.html
@@ -64,7 +64,7 @@
 
 						<li role="none"><a href="/html/lesson_plans.html"><span id="lesson_plans">Lesson Plans</span></a>
 							<ol>
-								<li>Undisciplining in and through Contemporary Texts
+								<li>Undisciplining In and Through Contemporary Texts
 									<ol>
 										<li><a href="html/lesson_plans/contemporary_undisciplining_introduction.html">Introduction: Undisciplining In and Through Contemporary Texts</a></li>
 										<li><a href="html/lesson_plans/contemporary_undisciplining_ecocolonialism.html">Undisciplining Ecocolonialism with Leslie Marmon Silko</a></li>
@@ -74,6 +74,7 @@
 										<li><a href="html/lesson_plans/contemporary_africanfuturism.html">Africanfuturism and British Catastrophe Literature</a></li>
 										<li><a href="html/lesson_plans/contemporary_postcolonial_texts.html">Colonial/Postcolonial Texts of the “Dark Continent”</a></li>
 										<li><a href="html/lesson_plans/contemporary_detection_and_empire.html">Detection and the Logics of Empire</a></li>
+										<li><a href="html/lesson_plans/contemporary-jane-eyre-parasite.html">Undisciplining Through <em>Jane Eyre</em>, <em>Re Jane</em>, and <em>Parasite</em></a></li>
 									</ol>
 								</li>
 								<li><a href="/html/lesson_plans/palestine_eighteenth_nineteenth_introduction.html">Palestine in the Eighteenth and Nineteenth Centuries</a>
