--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -98,6 +98,7 @@
 						<li><strong>Diana Rose Newby</strong> (Princeton University)</li>
 						<li><strong>Indu Ohri</strong> (University of Virginia)</li>
 						<li><strong>Hyungji Park</strong> (Yonsei University)</li>
+						<li><strong>Matt Poland</strong> ( University of Washington)</li>
 						<li><strong>Padma Rangarajan</strong> (University of California, Riverside)</li>
 						<li><strong>Jessie Reeder</strong> (Binghamton University)</li>
 						<li><strong>Jacob Romanow</strong> (Bryn Mawr College)</li>
@@ -106,6 +107,7 @@
 						<li><strong>Anne Schwan</strong> (Edinburgh Napier University)</li>
 						<li><strong>Dana Aicha Shaaban</strong> (Texas Christian University)</li>
 						<li><strong>Breanna Simpson</strong> (York University)</li>
+						<li><strong>Emma Soberano</strong> (University of Michigan)</li>
 						<li><strong>Jessica R. Valdez</strong> (University of East Anglia)</li>
 						<li><strong>Alisha Walters</strong> (Penn State Abington)</li>
 						<li><strong>Winter Jade Werner</strong> (Wheaton College)</li>
